--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,9 @@
 
 [env:esp12e]
 platform = espressif8266 @ ~2.6.3
+board_build.f_cpu = 160000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 board = esp12e
 framework = arduino
 monitor_speed = 115200
