--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,11 @@
 [env:esp12e]
 platform = espressif8266
 board = esp12e
+board_build.f_cpu = 160000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 framework = arduino
 monitor_speed = 115200
-lib_deps = tzapu/WiFiManager
-#lib_deps = https://github.com/tzapu/WiFiManager.git # development because of non-blocking config portal
+upload_speed = 921600
+#lib_deps = tzapu/WiFiManager
+lib_deps = https://github.com/tzapu/WiFiManager.git # development because of non-blocking config portal
