--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
+board_build.f_cpu = 160000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 platform = espressif8266
+#platform = espressif8266 @ ~2.6.3  # OK
+#build_flags = -Os
 board = esp12e
 framework = arduino
 monitor_speed = 115200
-lib_deps = tzapu/WiFiManager
-#lib_deps = https://github.com/tzapu/WiFiManager.git # development because of non-blocking config portal
+upload_speed = 2000000
+#lib_deps = tzapu/WiFiManager
+lib_deps = https://github.com/tzapu/WiFiManager.git # development because of non-blocking config portal
+           https://github.com/greiman/SdFat
